--- a/index.html
+++ b/index.html
@@ -22,15 +22,13 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">Riverskaos.github.io</h1>
+      <h1 class="title">I'm Just Sayin'</h1>
     </header>
     <div id="container">
-      <p class="tagline">Ashley&#39;s Blog</p>
+      <p class="tagline">A Day in the Life and Times of Melissa Ashley</p>
       <div id="main" role="main">
         <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/riverskaos" class="code">View Riverskaos.github.io on GitHub</a>
-        </div>
+        <div class="inner"></div>
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
@@ -39,9 +37,7 @@
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<pre><code>
 </code></pre>
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
