--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
         </div>
         <article class="markdown-body">
           <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>An Identity Crisis</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
+<p>	&emsp;&emsp;&emsp;I find it pertinent to first define  the word your eyes immediately were drawn to: crisis – &lsquo;a time when a difficult  or important decision must be made&rsquo;. I know what you&rsquo;re thinking. And the  answer is yes, I am overdramatic most days, but if I weren&rsquo;t then why would you  be here reading what I seem to have no courage to say aloud? I found that upon  arriving to college, I indeed found myself in an identity crisis. I had to  decide how I wanted to represent my body, what sort of style did I want to  exhibit; would I be a pious Christian or one of those slightly wild, but still  safe kinds of people? You get the idea, I&rsquo;m sure you&rsquo;ve been there before. <br>
+  &emsp;&emsp;&emsp;But there was a more intense,  pressing matter that continually weighed on my brain. What was I going to call  myself? This was my chance to remake myself if I so chose. I suppose you must  also understand that I introduce myself by my middle name, forever hiding my  first name. During my childhood, first names were sort of a family secret, but  that&rsquo;s for another time.<br>
+  &emsp;&emsp;&emsp;I repeatedly found myself caught between the  studious and attentive &lsquo;Melissa&rsquo; during class (I liked to think she was the  sophisticated type), and the friendly and quite (uncharacteristically)  out-going &lsquo;Ashley&rsquo; among my peers. And so I can only conclude that at this very  point in time, sitting in this chair, I am a strange amalgamation of the two  personalities. So hello, I would like to introduce myself. I am currently  calling myself Melissa Ashley for the time being and I would like to cordially  invite you to take a gander.</p>
 <pre><code>
 </code></pre>
 
