--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <p class="tagline">A Day in the Life and Times of Melissa Ashley</p>
       <div id="main" role="main">
         <div class="download-bar">
-        <div class="inner"></div>
+        <div class="inner">&quot;I have much to write to you, but I do not want to use paper and ink. Instead, I hope to visit you and talk with you face to face, so that our joy may be complete.&quot; 2 John 1:12</div>
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
